Fix text on small inline radios wrapping unnecessarily
Recalculate the max-width on small radio buttons so that it doesn't force text to wrap unnecessarily.

Also duplicate the change to small checkboxes for consistency.

--- a/packages/govuk-frontend/src/govuk/components/checkboxes/_mixin.scss
+++ b/packages/govuk-frontend/src/govuk/components/checkboxes/_mixin.scss
@@ -41,7 +41,7 @@
     // __item using flex-wrap because we want hints on a separate line.
     max-width: calc(100% - #{(($govuk-checkboxes-label-padding-left-right * 2) + $govuk-touch-target-size)});
     margin-bottom: 0;
-    padding: (base.govuk-spacing(1) + base.$govuk-border-width-form-element) base.govuk-spacing(3);
+    padding: (base.govuk-spacing(1) + base.$govuk-border-width-form-element) $govuk-checkboxes-label-padding-left-right;
     cursor: pointer;
     // remove 300ms pause on mobile
     touch-action: manipulation;
@@ -206,6 +206,12 @@
     }
 
     .govuk-checkboxes__label {
+      // Recalculate max-width to account for the smaller checkbox size
+      // 1px comes from padding-left (defined below)
+      max-width: calc(
+        100% - #{($govuk-touch-target-size - $input-offset) + $govuk-checkboxes-label-padding-left-right + 1px}
+      );
+
       // Create a tiny space between the small checkbox hover state so that it
       // doesn't clash with the label
       padding-left: 1px;
